4.Kubernetes/ingress/basic/nginx-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-svc
spec:
# link to the deployment 
  selector:
    app: nginx-app
  ports:
  - port: 80
    targetPort: 80
